--- a/src/app/sneakers-card/sneakers-card.component.css
+++ b/src/app/sneakers-card/sneakers-card.component.css
@@ -1,22 +1,79 @@
 
+@media screen and (min-width: 100px) {
+.card {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  width: 8rem;
+  height: 11rem;
+  margin: 1rem;
+  border-radius: 25% 10%;
+}
+
+
+.card__thumbnail {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
+  height: 100%;
+
+
+}
+
+.card__thumbnail>img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.text {
+  color: #fff;
+  font-size: 20px;
+  line-height: 1.5em;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card__thumbnail .hover {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+}
+
+.card__thumbnail:hover .hover {
+  opacity: 2;
+  backdrop-filter: invert(80%);
+}
+}
+
+@media screen and (min-width: 768px)  { 
   .card {
-    width: 60vw;
-    height: 60vh;
+    
+    width: 12rem;
+    height: 16rem;
+    margin: 1rem;
+    
   }
   
-  img {
-    height: 100%;
-    object-fit:cover;
-    
-    transform-origin:center;
-    transform:perspective(800px) rotateY(25deg);
-    transition:0.5s;
+  
+  .text {
+    color: #fff;
+    font-size: 40px;
+    line-height: 1.5em;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
- 
-  img:hover {
-    opacity:0.3;
-  }
-  img:hover {
-    transform:perspective(800px)       rotateY(0deg);
-    opacity:1;
-  }
+}
+  
