--- a/src/app/sneakers-card/sneakers-card.component.html
+++ b/src/app/sneakers-card/sneakers-card.component.html
@@ -1,4 +1,13 @@
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1569390173732-5c735072c80f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-      
+<div class="card">
+    <div class="card__thumbnail">
+        <img
+            src="https://martinvalen.com/13249-medium_default/plateforme-sneakers-basket-blanc-noir.jpg">
+        <div class="hover">
+            <div class="text">
+                <p>Model</p>
+                <hr>
+                <p>Brand</p>
+            </div>
+        </div>
     </div>
+</div>
