--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -1,1 +1,59 @@
-<p>header-nav works!</p>
+<!-- <body> -->
+  <nav class="navbar">
+    <div class="imgLogo">
+      <img src="assets/LOGO SNK.jpg" id="imgLogo" href="#">
+    </div>
+    <div class="right">
+      <div class="burger">
+        <label for="btn" class="icon">
+          <svg viewBox="0 0 100 80" width="40" height="40">
+            <rect width="100" height="15"></rect>
+            <rect y="35" width="100" height="15"></rect>
+            <rect y="70" width="100" height="15"></rect>
+          </svg>
+        </label>
+        <input type="checkbox" id="btn">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#">Ajouter une paire</a>
+          </li>
+          <hr>
+          <li class="nav-item">
+            <a href="#">Ma collection</a>
+          </li>
+          <hr>
+          <li class="nav-item">
+            <a href="#">Salle d'enchères</a>
+          </li>
+          <hr>
+          <li class="nav-item">
+            <a href="#">Mes favoris</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="imgProfile">
+        <label for="btn2" class="icon2">
+        <img src="assets/GAB.jpg">
+      </label>
+      <input type="checkbox" id="btn2">
+        <ul class="nav-menu1">
+          <li class="nav-item1">
+            <a href="#">Mon compte</a>
+          </li>
+          <hr>
+          <li class="nav-item1">
+            <a href="#">Déconnection</a>
+          </li>
+
+          </ul>
+      </div>
+      <div class="imgSearch">
+        <label for="btnSearch" class="icon3">
+        <img src="assets/search.png" id="imgSearch">
+      </label>
+      <input type="checkbox" id="seach">
+      </div>
+    </div>
+  </nav>
+
