ajout des routes et correction responsive

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,13 +3,13 @@
     <div class="backGround">
         <div class="containerLiens">
             <div class="trait_dessus"><hr></div>
-            <p id="lienProfil">{{profil}}</p>
+            <a [routerLink]="['/profile/:id']" href="#" id="lienProfil">{{profil}}</a>
             <div class="trait_dessus"><hr></div>
-            <p id="lienContact">{{contact}}</p>
+            <a [routerLink]="['contact']" href="#" id="lienContact">{{contact}}</a>
             <div class="trait_dessus"><hr></div>
-            <p id="lienFaqs">{{faqs}}</p>
+            <a [routerLink]="['faqs']" href="#" id="lienFaqs">{{faqs}}</a>
             <div class="trait_dessus"><hr></div>
-            <p id="lienLegal">{{legal}}</p>
+            <a [routerLink]="['legal-notice']" href="#" id="lienLegal">{{legal}}</a>
             <div class="trait_dessus"><hr></div>
         </div>
         <div id="logo_icons">
