--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 100px) and (max-width: 768px) {
+@media screen and (min-width: 390px) and (max-width: 768px) {
     #containerAll{
         background-color: #00adb5;
         width: 100%;
@@ -10,16 +10,14 @@
 
     #container2{
       
-        width: 90%;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        margin-left: 25PX;
-        margin-right: 25PX;
-        margin-top: 20px;
     }
 
     #container1{
         width: 100%;
+       
     }
     #cSNKC{
         text-align: center;
@@ -41,13 +39,43 @@
         font-size: 24px;
         text-align:center;
         color: white;
-        width: 90%;
+        width: 85%;
         display: flex;
         flex-direction: column;
         margin-left: 25PX;
         margin-right: 25PX;
         margin-top: 20px;
     }
+
+    a{
+        text-decoration: none;
+        color: white;
+    }
+
+    a:link {
+        color: white;
+      }
+
+      a:visited {
+        color: white;
+      }
+
+      a:focus {
+        border-radius: 10%;
+        background: #74c2cc;
+      }
+      
+      a:hover {
+        border-radius: 10%;
+        background: #74c2cc;
+      }
+      
+      a:active {
+        border-radius: 10%;
+        background: #41a1ae;
+        color: black;
+      }
+
     #trait_dessus
     {
     border-top: 5px white solid;
@@ -98,7 +126,7 @@
     #logo{
         border-radius: 30px;
         max-height: 150px;
-        max-width: 900px;
+        max-width: 350px;
         transform: rotate(15deg);
         
     }
@@ -108,7 +136,7 @@
         margin-top: 50px;
         height: 10rem;
         display: flex;
-        width: 90%;
+        width: 100%;
         display: flex;
         justify-content: center;
         transform: rotate(15deg);
@@ -195,6 +223,36 @@
         margin-bottom: 10%;
         order: 3;
     }
+
+    a{
+        text-decoration: none;
+        color: white;
+    }
+
+    a:link {
+        color: white;
+      }
+
+      a:visited {
+        color: white;
+      }
+
+      a:focus {
+        border-radius: 10%;
+        background: #74c2cc;
+      }
+      
+      a:hover {
+        border-radius: 10%;
+        background: #74c2cc;
+      }
+      
+      a:active {
+        border-radius: 10%;
+        background: #41a1ae;
+        color: black;
+      }
+
     #trait_dessus
     {
     border-top: 5px white solid;
@@ -328,6 +386,7 @@
     #container1{
         width: 100%;
     }
+
     #cSNKC{
         text-align: center;
         font-size: 24px;
@@ -345,6 +404,7 @@
         flex-direction: row;
         
     }
+
     .containerLiens{
         height: 40%;
         font-size: 36px;
@@ -362,11 +422,40 @@
         margin-bottom: 10%;
         order: 3;
     }
-    #trait_dessus
-    {
-    border-top: 5px white solid;
-    width : 100px;
+    
+    #trait_dessus{
+        border-top: 5px white solid;
+        width : 100px;
     }
+
+       a{
+        text-decoration: none;
+        color: white;
+    }
+
+    a:link {
+        color: white;
+      }
+
+      a:visited {
+        color: white;
+      }
+
+      a:focus {
+        border-radius: 10%;
+        background: #74c2cc;
+      }
+      
+      a:hover {
+        border-radius: 10%;
+        background: #74c2cc;
+      }
+      
+      a:active {
+        border-radius: 10%;
+        background: #41a1ae;
+        color: black;
+      }
 
     #lienProfil{
         width: 50%;
