--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,13 +3,13 @@
     <div class="backGround">
         <div class="containerLiens">
             <div class="trait_dessus"><hr></div>
-            <a [routerLink]="['/profile/:id']" href="#" id="lienProfil">{{profil}}</a>
+            <a [routerLink]="['/profile/:id']" id="lienProfil">{{profil}}</a>
             <div class="trait_dessus"><hr></div>
-            <a [routerLink]="['contact']" href="#" id="lienContact">{{contact}}</a>
+            <a [routerLink]="['contact']" id="lienContact">{{contact}}</a>
             <div class="trait_dessus"><hr></div>
-            <a [routerLink]="['faqs']" href="#" id="lienFaqs">{{faqs}}</a>
+            <a [routerLink]="['faqs']" id="lienFaqs">{{faqs}}</a>
             <div class="trait_dessus"><hr></div>
-            <a [routerLink]="['legal-notice']" href="#" id="lienLegal">{{legal}}</a>
+            <a [routerLink]="['legal-notice']" id="lienLegal">{{legal}}</a>
             <div class="trait_dessus"><hr></div>
         </div>
         <div id="logo_icons">
