--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,22 @@
+<p>profile works!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
+<p>profile works!</p>
 <p>profile works!</p>
