--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,1 +1,9 @@
-<p>favorite works!</p>
+<div class="containerFavorite">
+  <div *ngFor="">
+    <a [routerLink]="['/sneakers/:id/create']">
+      <app-sneakers-card id="" ></app-sneakers-card></a>
+      [sneakers]="sneaker"
+  </div>
+</div>
+
+
