--- a/src/app/header-nav/header-nav.component.css
+++ b/src/app/header-nav/header-nav.component.css
@@ -13,6 +13,7 @@
 }
 
 .navbar{
+  background-color: white;
   opacity: 1;
   padding: 10px;
   display: flex;
@@ -178,6 +179,7 @@ display: none;
 }
 
 .navbar{
+background-color: white;
   opacity: 1;
   padding: 10px;
   display: flex;
@@ -341,6 +343,7 @@ display: none;
 }
 
 .navbar{
+  background-color: white;
   opacity: 1;
   padding: 10px;
   display: flex;
