--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,1 +1,11 @@
-<button [routerLink]="['sneakers/:id/create']">Add Sneakers</button>
+<h1>MA COLLECTON</h1>
+<div id="containerButton">
+<button [routerLink]="['/sneakers/:id/create']">Add Sneakers</button>
+</div>
+<div class="containerCollection">
+    <div *ngFor="let sneaker of sneakersByUserId">
+        <a [routerLink]="['/sneakers/', sneaker.id]">
+            <app-sneakers-card id="test" [sneakers]="sneaker"></app-sneakers-card>
+        </a>
+    </div>
+</div>
