--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -19,7 +19,7 @@
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item">
-            <a [routerLink]="['collection/:id']">{{collection}}</a>
+            <a [routerLink]="['user/:id/collection']">{{collection}}</a>
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item">
