--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -23,7 +23,7 @@
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item">
-            <a [routerLink]="['auctions']">{{auctions}}</a>
+            <a [routerLink]="['user/:id/auctions']">{{auctions}}</a>
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item">
