--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -27,7 +27,7 @@
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item">
-            <a [routerLink]="['favorite']">{{favorite}}</a>
+            <a [routerLink]="['user/:id/favorite']">{{favorite}}</a>
           </li>
         </ul>
       </div>
