--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header-nav></app-header-nav>
 
 <router-outlet></router-outlet>
+<app-auction-card></app-auction-card>
 
 <app-footer></app-footer>
