--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -1,1 +1,15 @@
-<app-sneakers-card></app-sneakers-card>
+<h1>SNEAKERS</h1>
+<div id="containerButton">
+<div class="containerCollection" *ngIf="sneakers$ | async as sneakers">
+    <h1>PREVIEW SNEAKERS</h1>
+    <p>Postée {{ sneakers.createdDate | date: 'le d MMMM yyyy, à HH:mm' }}</p>
+    <h2>Marque : {{sneakers.brand | uppercase }}</h2>
+    <h3>Model : {{sneakers.model | lowercase}}</h3>
+    <img [src]="sneakers.pictures" [alt]="sneakers.brand">
+    <p>Taille : {{sneakers.size}}</p>
+    <p>L'état global de ma sneakers : {{sneakers.stateOfWear}}</p>
+    <p *ngIf="sneakers.createdDate">Date d'achat : {{sneakers.createdDate | date: 'le d MMMM yyyy, à HH:mm'}}</p>
+    <p *ngIf="sneakers.authentification">L'authentification est : {{ sneakers.authentification}}</p>
+    <p *ngIf="sneakers.mainColor">Ma couleur : {{sneakers.mainColor}}</p>
+  </div>
+</div>
