correction bug affichage route

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,4 +1,4 @@
-<h1>MA COLLECTON</h1>
+<h1>MA COLLECTION</h1>
 <div id="containerButton">
 <button [routerLink]="['/user/:id/sneakers/create']">Add Sneakers</button>
 </div>
