--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,6 +1,6 @@
-<h1>MA COLLECTON</h1>
+<h1>MA COLLECTION</h1>
 <div id="containerButton">
-<button [routerLink]="['/sneakers/:id/create']">Add Sneakers</button>
+<button [routerLink]="['/user/:id/sneakers/create']">Add Sneakers</button>
 </div>
 <div class="containerCollection">
     <div *ngFor="let sneaker of sneakersByUserId">
