--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,9 +1,9 @@
 <h1>MES FAVORIS</h1>
 <div class="containerFavorite">
-  <div *ngFor="">
-    <a [routerLink]="['/sneakers/:id/create']">
-      <app-sneakers-card id="" ></app-sneakers-card></a>
-      [sneakers]="sneaker"
+  <div>
+    <a [routerLink]="['/sneakers/']">
+      <app-sneakers-card></app-sneakers-card></a>
+      <app-like></app-like>
   </div>
 </div>
 
