--- a/src/app/auction-card/auction-card.component.css
+++ b/src/app/auction-card/auction-card.component.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 100px) {
 
     .card {
+        position: relative;
         width: 18rem;
         margin: 2rem;
         background-color: white;
@@ -26,7 +27,6 @@
         width: 100%;
         object-fit: cover;
         transform: translate(-50%, -50%);
-        transition-property: filter width;
         transition-duration: .3s;
         transition-timing-function: ease;
     }
@@ -45,7 +45,6 @@
 @media screen and (min-width: 768px) {
 
     .card {
-        width: 22rem;
         margin: 2.5rem;
     }
 }
