modification problèmes d'affichage

--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -9,6 +9,6 @@
     <p>L'état global de ma sneakers : {{sneakersById?.stateOfWear}}</p>
     <p *ngIf="sneakersById?.createdDate">Date d'achat : {{sneakersById?.createdDate | date: 'le d MMMM yyyy, à HH:mm'}}</p>
     <p *ngIf="sneakersById?.authentification">L'authentification est : {{ sneakersById?.authentification}}</p>
-    <p *ngIf="sneakersById?.mainColor">Ma couleur : {{sneakersById?.mainColor}}</p>
+    <p *ngIf="sneakersById?.mainColor">Ma couleur : </p>
   </div>
 </div>
