--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,8 @@
 <div class="container">
-<h1>We stay in touch !</h1>
-<p>Nous, comme nous sommes proches de notre communauté de sneakers-addicts, nous ne faisons pas de formulaire de contact qui est traité 1 fois par mois.</p>
-<p>Non, nous, nous préférons vous donner le numéro de téléphone personnel de notre PDG : </p>
-<h1>06 38 69 71 51</h1>
-<p>Sneakeursement votre ^^</p>
+    <h1>We stay in touch !</h1>
+    <p>Nous, comme nous sommes proches de notre communauté de sneakers-addicts, nous ne faisons pas de formulaire de
+        contact qui est traité 1 fois par mois.</p>
+    <p>Non, nous, nous préférons vous donner le numéro de téléphone personnel de notre PDG : </p>
+    <h1>06 38 69 71 51</h1>
+    <p>Sneakeursement votre ^^</p>
 </div>
