--- a/src/app/auctions/auctions.component.css
+++ b/src/app/auctions/auctions.component.css
@@ -9,3 +9,31 @@ a {
     text-decoration: none;
     color: black;
 }
+
+h1 {
+    margin: 3rem;
+}
+
+hr {
+    margin: 3rem;
+}
+
+#containerButton {
+    display: flex;
+    justify-content: right;
+    width: 100%;
+}
+
+button {
+    margin-right: 2rem;
+    background-color: white;
+    width: 15rem;
+    height: 4rem;
+    border-radius: 2rem;
+    padding: 15px;
+    font-size: 16px;
+  }
+
+  button:hover {
+    background: #74c2cc;
+  }
