--- a/src/app/auctions/auctions.component.html
+++ b/src/app/auctions/auctions.component.html
@@ -1,7 +1,13 @@
+<div id="containerButton">
+    <button [routerLink]="['/user/:id/auction/create']">Créer une salle aux enhères</button>
+</div>
+<h1>Mes salles aux enchères</h1>
+<hr>
 <div class="list">
-    <div *ngFor="let room of roomsByUserId">
+    <div *ngFor="let room of usersRooms">
         <a [routerLink]="['/auction/', room.id]">
             <app-auction-card [room]="room"></app-auction-card>
         </a>
     </div>
 </div>
+
