--- a/src/app/created-sneakers/created-sneakers.component.html
+++ b/src/app/created-sneakers/created-sneakers.component.html
@@ -4,9 +4,9 @@
       <h1>AJOUTER SNEAKERS</h1>
       <form [formGroup]="createdSneakersForm">   
         <div class="colorForm">
-          <div class="form-group">
+          <div class="form-group" formArrayName="pictures" *ngFor="let picture of pictures.controls; let i = index">
             <label for="pictures">URL de l'image</label>
-            <input id="pictures" type="text" formControlName="pictures">
+            <input id="pictures" type="text" formControlName="{{i}}">
           </div>
           <div class="form-group">
             <label for="brand">Marque</label>
@@ -23,7 +23,7 @@
           <div class="form-group">
             <label for="stateOfWear">Etat sneakers</label>
             <select id="stateOfWear" formControlName="stateOfWear">
-            <option id="optionForm" *ngFor="let state of states" [value]="getStateOfWearValue(state)">{{state}}</option>
+            <option id="optionForm" *ngFor="let state of states" [ngValue]="state">{{stateOfWearToString(state)}}</option>
             </select>
           </div>
           <div class="form-group">
@@ -37,7 +37,7 @@
           <div class="form-group">
             <label for="mainColor">Couleur</label>
             <select id="mainColor" formControlName="mainColor">
-            <option id="optionForm" *ngFor="let color of colors" [value]="getColorsValue(color)">{{color}}</option>
+            <option id="optionForm" *ngFor="let color of colors" [ngValue]="getColorsValue(color)">{{color}}</option>
             </select>
           </div>
           <div class="action-buttons">
@@ -55,7 +55,7 @@
       <h3>Model : {{createdSneakersForm.controls['model'].value | lowercase}}</h3>
       <img [src]="sneakers.pictures" [alt]="sneakers.brand">
       <p>Taille : {{createdSneakersForm.controls['size'].value}}</p>
-      <p>L'état global de ma sneakers : {{getStateOfWearValuePreview(createdSneakersForm.controls['stateOfWear'].value)}}</p>
+      <p>L'état global de ma sneakers : {{stateOfWearToString(createdSneakersForm.controls['stateOfWear'].value)}}</p>
       <p *ngIf="sneakers.createdDate">Date d'achat : {{createdSneakersForm.controls['dateOfPurchase'].value | date: 'd MMMM yyyy'}}</p>
       <p *ngIf="sneakers.authentification">L'authentification est : {{ sneakers.authentification}}</p>
       <p *ngIf="sneakers.mainColor">Ma couleur : {{getColorsValuePreview(createdSneakersForm.controls['mainColor'].value)}}</p>
