--- a/src/app/auctions/auctions.component.css
+++ b/src/app/auctions/auctions.component.css
@@ -24,7 +24,7 @@ hr {
     width: 100%;
 }
 
-button {
+.createButton {
     margin-right: 2rem;
     background-color: white;
     width: 15rem;
@@ -36,4 +36,10 @@ button {
 
   button:hover {
     background: #74c2cc;
+  }
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
   }
