--- a/src/app/created-sneakers/created-sneakers.component.css
+++ b/src/app/created-sneakers/created-sneakers.component.css
@@ -1,4 +1,3 @@
-@media screen and (min-width: 390px) and (max-width: 768px) {
     *{
         background-color: #00adb5;
        }
@@ -86,7 +85,7 @@
         margin-top: 10%;
         margin-bottom: 5%;
         width: 50%;
-        height: 30pxPX;
+        height: 80px;
         border-radius: 2rem;
         text-align: center;
         padding: 15px;
@@ -130,283 +129,99 @@
         background-color: white;
       }
 
-}
 @media screen and (min-width: 768px) and (max-width: 992px) {
-    *{
-        background-color: #00adb5;
-       }
-       .background{
-        display: flex;
-        flex-direction: row;
-        height: 100%;
-       }
+  .containerPreview {
+    width: 40%;
+    margin: 20px auto;
+  }
 
-       .containerPreview{
-        width: 50%;
-        margin: 20px auto;
-      }
+   .containerForm {
+    width: 40%;
+    margin: 20px auto;
+   }
 
-       .containerForm{
-        width: 50%;
-        margin: 20px auto;
-       }
-
-       P{
-        background-color: white;
-        margin: 0;
-       }
-
-       img{     
-        font-size: 16px;
-        background-color: white;
-        margin: 0;
-        max-width: 80%;
-        padding: 10%;
-       }
-
-       h1{
-        background-color: white;
+       h1 {
         margin-top: 5%;
         margin-bottom: 10%;
-        text-align: center;
        }
-
-       h2{
-        background-color: white;
-        margin: 0;
-       }
-
-       h3{
-        background-color: white;
-        margin: 0;
-       }
-
-       label{
-        background-color: white;
-       }
-
-       .colorForm{
-        background-color: white;
-       }
-
-      .form-group {
-        margin: 10px auto;
-        width: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: white;
-      }
-      
-      input, textarea {
-        border-radius: 2rem;
-        width: 50%;
-        background-color: white;
-        text-align: center;
-      }
-      
-      .action-buttons {
-        width: 100%;
-        background-color: white;
-      }
-      
-      button {
-        display: block;
-        margin: 20px auto;
-        background-color: white;
-        margin-top: 10%;
-        margin-bottom: 5%;
-        width: 50%;
-        height: 30pxPX;
-        border-radius: 2rem;
-        background-color: white;
-        /* border: none; */
-        text-align: center;
-        padding: 15px;
-        font-size: 16px;
-
-      }
-
-      select{
-        background-color: white;
-        width: 50%;
-        border-radius: 2rem;
-        font-size: 16px;
-        text-align: center;
-      }
-
-      button:hover {
-        border-radius: 2rem;
-        background: #74c2cc;
-      }
-      
-      button:active {
-        border-radius: 2rem;
-        background: #41a1ae;
-        color: white;
-      }
 
     .form-card {
-        box-sizing: border-box;
         padding: 10PX;
-        border-radius: 10%;
-        background-color: white;
         height: 100%;
         margin: 20px;
       }
 
-      .sneakers-card{
-        box-sizing: border-box;
+      .sneakers-card {
         padding: 10PX;
-        border-radius: 10%;
-        background-color: white;
         height: 100%;
         margin: 20px;
       }
 
-      .background{
+      .background {
         display: flex;
         flex-direction: row;
+      }
+
+      button {
+        height: 60px;
+      }
+
+      .form-group {
+        margin: 15px auto;
       }
 }
 
 @media screen and (min-width: 993px) {
-    *{
-        background-color: #00adb5;
-       }
-
-       .background{
+       .background {
         display: flex;
         flex-direction: row;
         height: 100%;
        }
 
-       .containerPreview{
-        width: 50%;
+       .containerPreview {
+        width: 40%;
         margin: 20px auto;
       }
 
-       .containerForm{
-        width: 50%;
+       .containerForm {
+        width: 40%;
         margin: 20px auto;
        }
 
-       P{
-        font-size: 16px;
-        background-color: white;
-        margin: 0;
-       }
+       button {
+        height: 80px;
+      }
 
-       img{     
-        font-size: 16px;
-        background-color: white;
-        margin: 0;
-        max-width: 80%;
-        padding: 10%;
-       }
-
-       h1{
-        background-color: white;
+       h1 {
         margin-top: 5%;
         margin-bottom: 10%;
-        text-align: center;
        }
 
-       h2{
-        background-color: white;
-        margin: 0;
-       }
-
-       h3{
-        background-color: white;
-        margin: 0;
-       }
-
-       label{
-        font-size: 16px;
-        background-color: white;
-       }
-
-       .colorForm{
-        background-color: white;
-       }
-
-      .form-group {
-        margin: 10px auto;
-        width: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: white;
-      }
-      
       input, textarea {
-        border-radius: 2rem;
         font-size: 16px;
-        width: 50%;
-        background-color: white;
-        text-align: center;
       }
 
       select{
-        background-color: white;
-        width: 50%;
-        border-radius: 2rem;
-        font-size: 16px;
-        text-align: center;
-      }
-      
-      .action-buttons {
-        width: 100%;
-        background-color: white;
-      }
-      
-      button {
-        display: block;
-        margin: 20px auto;
-        background-color: white;
-        margin-top: 10%;
-        margin-bottom: 5%;
-        width: 50%;
-        height: 30pxPX;
-        border-radius: 2rem;
-        /* border: none; */
-        text-align: center;
-        padding: 15px;
         font-size: 16px;
       }
       
-      button:hover {
-        border-radius: 2rem;
-        background: #74c2cc;
-      }
-      
-      button:active {
-        border-radius: 2rem;
-        background: #41a1ae;
-        color: white;
+      button{
+        height: 50px;
       }
 
     .form-card {
-        box-sizing: border-box;
         padding: 10PX;
-        border-radius: 10%;
-        background-color: white;
         height: 100%;
         margin: 20px;
       }
 
-      .sneakers-card{
-        box-sizing: border-box;
+      .sneakers-card {
         padding: 10PX;
-        border-radius: 10%;
-        background-color: white;
         height: 100%;
         margin: 20px;
       }
 
-      .background{
-        display: flex;
-        flex-direction: row;
+      .form-group {
+        margin: 25px auto;
       }
 }
