--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,15 +1,13 @@
-@media screen and (min-width: 390px) and (max-width: 768px) {
+@media screen and (min-width: 390px){
     #containerAll{
         background-color: #00adb5;
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
-
     }
 
     #container2{
-
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -104,7 +102,6 @@
         margin-right: 25%;
         margin-top: 20px;
         margin-bottom: 20px;
-
     }
 
     #lienLegal{
@@ -128,7 +125,6 @@
         max-height: 150px;
         max-width: 350px;
         transform: rotate(15deg);
-
     }
 
     #icon{
@@ -140,7 +136,6 @@
         display: flex;
         justify-content: center;
         transform: rotate(15deg);
-
     }
 
     #iconFacebook{
