--- a/src/app/auction/auction.component.html
+++ b/src/app/auction/auction.component.html
@@ -1,1 +1,51 @@
-<p>auction works!</p>
+<div class="container">
+    <h2> Dernière enchère proposée : </h2>
+    <h1> 1025,00 E </h1>
+
+    <div class="room">
+        <div class="image">
+            <img src="https://static.lpnt.fr/images/2022/04/10/23029159lpw-23031557-article-jpg_8684530_1250x625.jpg">
+        </div>
+        <div class="room-details">
+            <input placeholder="Montant de votre enchère" type="number">
+            <button class="bid">Enchérir</button>
+            <p>Prix de départ : </p>
+            <p>Temps restant pour enchère : </p>
+            <div class="block-description">
+                <h4>Description</h4>
+                <p class="description">ljghemk kjbgferkl gb erkgberkg kergk ebgk erkgerkgkjergb kebgkj ebgk ebrkgb kerg
+                    kjegk eg </p>
+            </div>
+        </div>
+    </div>
+    <div class="auctions">
+        <h3>Historique des enchères</h3>
+        <table>
+            <tr>
+                <th>Pseudo</th>
+                <th>Date et heure</th>
+                <th>Montant enchère</th>
+            </tr>
+
+            <tr>
+                <td>tutu</td>
+                <td>tgrfdgtrfeds</td>
+                <td>40 €</td>
+            </tr>
+
+            <tr>
+                <td>Eljhkjn</td>
+                <td>yhgtrfd</td>
+                <td>110 €</td>
+            </tr>
+
+            <tr>
+                <td>Licorne</td>
+                <td>tgrfedsdzd</td>
+                <td>200 €</td>
+            </tr>
+
+        </table>
+    </div>
+
+</div>
