--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -2,7 +2,7 @@
 <div class="containerFavorite">
   <div class="sneakersLike" >
     <div>
-      <app-sneakers-card [sneakers]="" *ngIf=""></app-sneakers-card>
+      <app-sneakers-card></app-sneakers-card>
     </div>
       <app-like></app-like>
   </div>
