--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -1,7 +1,7 @@
 <div class="background">
   <div class="containerSneakers">
     <h1>SNEAKERS</h1>
-    <img [src]="sneakersById?.pictures" [alt]="sneakersById?.brand">
+    <img [src]="'https://static.nike.com/a/images/f_auto,cs_srgb/w_1536,c_limit/qkhgcptmdr5i0lljxhot/chaussures-air-max-air-max-day.jpg'" [alt]="sneakersById?.brand">
     <h2>Détails de la Sneakers</h2>
     <h3>Marque : {{sneakersById?.brand | titlecase}}</h3>
     <h3>Model : {{sneakersById?.model | titlecase}}</h3>
