création update sneakers

--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -1,5 +1,8 @@
 <div class="background">
   <div class="containerSneakers">
+    <div id="containerButton">
+      <button [routerLink]="['/sneakers/:id/update']">Update Sneakers</button>
+  </div>
     <h1>SNEAKERS</h1>
     <img [src]="'https://static.nike.com/a/images/f_auto,cs_srgb/w_1536,c_limit/qkhgcptmdr5i0lljxhot/chaussures-air-max-air-max-day.jpg'" [alt]="sneakersById?.brand">
     <h2>Détails de la Sneakers</h2>
