--- a/src/app/sneakers/sneakers.component.css
+++ b/src/app/sneakers/sneakers.component.css
@@ -1,4 +1,3 @@
-@media screen and (min-width: 390px) {
     *{
         background-color: #00adb5;
     }
@@ -52,7 +51,25 @@
         width: 100%;
         margin: 0;
     }
-}  
+
+    #containerButton {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: right;
+        padding: 0;
+        width: 100%;
+        background-color: white;
+        margin-bottom: 30px;
+    }
+    
+    button {
+        background-color: white;
+        width: 40%;
+        height: 30pxPX;
+        border-radius: 2rem;
+        padding: 15px;
+        font-size: 16px;
+      }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     
