--- a/src/app/sneakers/sneakers.component.css
+++ b/src/app/sneakers/sneakers.component.css
@@ -52,6 +52,39 @@
         width: 100%;
         margin: 0;
     }
+
+    button {
+        background-color: white;
+        width: 40%;
+        height: 30pxPX;
+        border-radius: 2rem;
+        padding: 15px;
+        font-size: 16px;
+      }
+      
+      select{
+        background-color: white;
+        width: 50%;
+        border-radius: 2rem;
+        font-size: 16px;
+        text-align: center;
+      }
+    
+      button:hover {
+        border-radius: 2rem;
+        background: #74c2cc;
+      }
+      
+      button:active {
+        border-radius: 2rem;
+        background: #41a1ae;
+        color: white;
+      }
+
+      #containerButton {
+        background-color: white;
+        text-align: right;
+      }
 }  
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
