corrections link back

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm" (ngSubmit)="onRegisterSubmit()">
+<form [formGroup]="form" (ngSubmit)="onRegisterSubmit()">
     <div>
         <label for="email">Email</label>
         <input type="email" FormControlName="email" name="email">
