--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+
+<form [formGroup]="form" (ngSubmit)="onRegisterSubmit()">
+    <div class="form-card">
+        <div>
+            <label for="email">Email </label>
+            <input type="email" FormControlName="email" name="email">
+        </div>
+        <div>
+            <label for="password">Mot de passe </label>
+            <input type="password" FormControlName="password" name="password">
+        </div>
+        
+        <div id="containerButton">
+            <button type="submit">Se connecter </button>
+        </div>
+    </div>
+</form>
