--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -1,5 +1,8 @@
 <div class="background">
   <div class="containerSneakers">
+    <div id="containerButton">
+      <button [routerLink]="['/sneakers/:id/update']">Update Sneakers</button>
+  </div>
     <h1>SNEAKERS</h1>
     <div id="containerButton">
       <!-- <button (click)="deleteSneakers(sneakersById?)" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button> -->
