--- a/src/app/sneakers/sneakers.component.css
+++ b/src/app/sneakers/sneakers.component.css
@@ -1,4 +1,3 @@
-@media screen and (min-width: 390px) {
     *{
         background-color: #00adb5;
     }
@@ -82,10 +81,14 @@
       }
 
       #containerButton {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: right;
+        padding: 0;
+        width: 100%;
         background-color: white;
-        text-align: right;
+        margin-bottom: 30px;
       }
-}  
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     
