--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 
-<form [formGroup]="form" (ngSubmit)="onRegisterSubmit()">
+<form [formGroup]="form" (ngSubmit)="onLoginFormSubmit()">
     <div class="form-card">
         <div>
             <label for="email">Email </label>
-            <input type="email" FormControlName="email" name="email">
+            <input type="email" formControlName="email" name="email">
         </div>
         <div>
             <label for="password">Mot de passe </label>
-            <input type="password" FormControlName="password" name="password">
+            <input type="password" formControlName="password" name="password">
         </div>
         
         <div id="containerButton">
