--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,11 +2,11 @@
     <div class="form-card">
         <div>
             <label for="email">Email</label>
-            <input type="email" FormControlName="email" name="email">
+            <input type="email" formControlName="email" name="email">
         </div>
         <div>
             <label for="password">Mot de passe</label>
-            <input type="password" FormControlName="password" name="password">
+            <input type="password" formControlName="password" name="password">
         </div>
         <div id="containerButton">
             <button type="submit">S'incrire</button>
