--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<button routerLink="login">Connexion</button>
+<button routerLink="login">Connection</button>
 <button routerLink="register">Inscription</button>
 
