--- a/src/app/sneakers/sneakers.component.css
+++ b/src/app/sneakers/sneakers.component.css
@@ -1,5 +1,5 @@
     *{
-        background-color: #00adb5;
+        background-color: white;
     }
     
     .background{
@@ -15,11 +15,30 @@
         background-color: white;
         box-sizing: border-box;
         padding: 10PX;
-        border-radius: 10%;
         background-color: white;
         height: 100%;
         margin: 20px;
         padding: 40px;
+        position: relative;
+        margin: 2rem;
+        background-color: white;
+        box-shadow: 5px 5px 10px #999;
+    }
+    
+    .containerSneakersDetails {
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .containerImg {
+        height: 100%;
+        background-color: white;
+        padding: 5%;
+        text-align: center;
+    }
+    
+    .containerDetails {
+        background-color: white;
     }
     
     h1 {
@@ -32,6 +51,7 @@
         background-color: white;
         margin: 0;
         font-size: 30px;
+        margin-top: 10%;
     }
     
     h3 {
