--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,26 +1,31 @@
+<div class="principal">
 <div class="profile-card">
 	<div class="card-header">
-		<h1>Natsu Dragon</h1>
-		<p>User Experience Designer,</p>
-		<p>Hacker, Full-time Fiddler</p>
-		<p>Dragon Slayer</p>
+		<h1>{{pseudo}}</h1>
+		<p> {{name}} {{firstname}}</p>
+		<p>Collectionneuse hors-"paires"</p>
+
 	</div>
 	<img class="image" src="assets/Gramille.jpeg" alt="profile Image">
 	<div class="card-info">
-		<p>Natsu is, apart from being an extrodarnary wizard from Fairy Tale, with very rare fire magic Natsu is a Dragon Slayer trained the ancient dragon igneil.</p>
+		<u><strong>Descriptif :</strong></u>
+		<br>
+		<br>
+		<p>Je suis une passionnée, les Air Max et Tn font parties de mes best !</p>
 	</div>
-	<div class="bottom2">
-		<h2>Find Natsu Dragon Online</h2>
+	<div class="bottom">
+		<h2>Retrouvez mes posts</h2>
 		<ul>
-			<li><a href="#"><i class="fa fa-fw fa-twitter"></i>Twitter</a></li>
-			<li><a href="#"><i class="fa fa-fw fa-github"></i>Github</a></li>
-			<li><a href="#"><i class="fa fa-fw fa-codepen"></i>Codepen</a></li>
+			<li><a href="https://fr-fr.facebook.com/julOfficial/"><i class="fab fa-twitter"></i>Facebook</a></li>
+			<li><a href="https://www.instagram.com/juldetp/?hl=fr"><i class="fa fa-fw fa-github"></i>Instagram</a></li>
+			<li><a href="https://www.pinterest.fr/alexandrehenryp/lissage-de-cheveux/"><i class="fa fa-fw fa-codepen"></i>Pinterest</a></li>
 		</ul>
 	</div>
-	<div class="card-footer2">
-		<ul>
-			<li><a href="#"><i class="fa fa-fw fa-share"></i>share</a></li>
-			<li><a href="#">Report<i class="fa fa-fw fa-exclamation"></i></a></li>
-		</ul>
-	</div>
+<!--	<div class="card-footer2">-->
+<!--		<ul>-->
+<!--			<li><a href="#"><i class="fa fa-fw fa-share"></i>share</a></li>-->
+<!--			<li><a href="#">Report<i class="fa fa-fw fa-exclamation"></i></a></li>-->
+<!--		</ul>-->
+<!--	</div>-->
+</div>
 </div>
