--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="backGround">
         <div class="containerLiens">
             <div class="trait_dessus"><hr></div>
-            <a [routerLink]="['/profile/:id']" id="lienProfil">{{profil}}</a>
+            <a [routerLink]="['/profile']" id="lienProfil">{{profil}}</a>
             <div class="trait_dessus"><hr></div>
             <a [routerLink]="['contact']" id="lienContact">{{contact}}</a>
             <div class="trait_dessus"><hr></div>
