--- a/src/app/delet-sneakers/delet-sneakers.component.html
+++ b/src/app/delet-sneakers/delet-sneakers.component.html
@@ -1,6 +1,6 @@
 <div class="form-card">
     <p>Votre Sneakers a bien été supprimé.</p>
     <div id="containerButton">
-        <button [routerLink]="['/user/:id/collection']">Retour vers ma collection</button>
+        <button [routerLink]="['/collection/']">Retour vers ma collection</button>
     </div>
 </div>
